fix
Fixed background image not showing

--- a/ASMI/wwwroot/css/recrutari.css
+++ b/ASMI/wwwroot/css/recrutari.css
@@ -98,10 +98,6 @@ html {
     text-align: center; 
 }
 
-body, containerMain {
-    background-color: black;
-}
-
 #asmi-navbar{
     display: none !important;
 }
